[LayoutNG] Fix for ShrinkToFit abspos size

Bug: 817975
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_layout_ng
Change-Id: Id99fa3f35ee7f7d3438ab018d4c38e13610cc6ee
Reviewed-on: https://chromium-review.googlesource.com/948363
Commit-Queue: Aleks Totic <atotic@chromium.org>
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540876}
Former-commit-id: 4e122060522ea22c5e886c2e20b83460624cdbd8